Bug 698169 - Make WebGL texSubImage2D respect alpha-premultiplied DOM sources - r=bjacob